Add style to reflect the mobile version of porfolio

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <heading class="navbar">
-    <div class="container">
+  <header>
+    <div class="container nav-container">
       <a href="index.html">Oluwatoyin Olaoye</a>
       <img src="images/menu.svg" alt="open navigation">
       <nav class="desktop-nav">
@@ -21,10 +21,10 @@
         </ul>
       </nav>
     </div>
-  </heading>
+  </header>
   <section class="landing-page">
     <div class="container">
-      <h1>Hi There, I am Toyin.</h1>
+      <h1 class="main-title">Hi There, <br> I am Toyin.</h1>
       <p class="intro">I'm a Software Developer</p>
       <p class="text">I can help you build a product, feature or website. Look through some of my 
         works and experiences. If you like what you see and have a project you need coded, don't hesitate to contact me.
