Effect code reviewer's suggestions

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
   <section class="landing-page">
     <div class="container">
       <h1 class="main-title">Hi There, <br> I am Toyin.</h1>
-      <p class="intro">I'm a Software Developer</p>
+      <h3 class="intro">I'm a Software Developer</h3>
       <p class="text">I can help you build a product, feature or website. Look through some of my 
         works and experiences. If you like what you see and have a project you need coded, don't hesitate to contact me.
       </p>
       <div class="social-link-lp">
-        <menu class="top-link">
+        <ul class="top-link">
           <li><a href="https://www.github.com/MindPrepDev"><img src="images/github.svg" alt="my github profile"></a></li>
           <li><a href="https://www.linkedin.com/in/oluwatoyin-olaoye-82880363/"><img src="images/linkedin.svg" alt="my linkedin profile"></a></li>
           <li><a href="#"><img src="images/angel-list.svg" alt="connect to angel list"></a></li>
           <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/twitter.svg" alt=""></a></li>
           <li><a href="https://medium.com/@mindprepopps"><img src="images/medium.svg" alt=""></a></li>
-        </menu>
+        </ul>
       </div>
     </div>
   </section>
