Adjust the position of social media icons and correct the README typo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <section class="landing-page">
     <div class="container">
-      <h1 class="main-title">Hi There, <br> I am Toyin.</h1>
+      <h1 class="main-title">Hey There, <br> I am Toyin.</h1>
       <h3 class="intro">I'm a Software Developer</h3>
       <p class="text">I can help you build a product, feature or website. Look through some of my 
         works and experiences. If you like what you see and have a project you need coded, don't hesitate to contact me.
