Build a more robust structure of HTML and CSS As a continum, this part features the about-section and the works section of the porfolio site with focus on the mobile version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
   <header>
     <div class="container nav-container">
       <a href="index.html">Oluwatoyin Olaoye</a>
@@ -22,7 +23,8 @@
       </nav>
     </div>
   </header>
-  <section class="landing-page">
+
+  <section id="landing-page">
     <div class="container">
       <h1 class="main-title">Hey There, <br> I am Toyin.</h1>
       <h3 class="intro">I'm a Software Developer</h3>
@@ -37,6 +39,221 @@
           <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/twitter.svg" alt=""></a></li>
           <li><a href="https://medium.com/@mindprepopps"><img src="images/medium.svg" alt=""></a></li>
         </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="works-section">
+    <div class="container">
+      <h2 class="recent-works">My Recent Works</h2>
+      <hr class="inline-hr">
+      <div class="multi-post">
+        <img class="hype-img" src="images/hype-project.png" alt="project sample">
+        <div class="hype-container">  
+          <h3 class="hype-pro sub-pro">Multi-Post Stories</h3>
+          <p class="normal hype-pro">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+            took a standard dummy text.
+          </p>
+          <ul class="tech custom-tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <input type="button" value="See Project">
+      </div>
+
+      <div class="project one">
+        <img src="images/mask-group.png" alt="another project sample">
+        <img src="images/project.png" alt="another project sample" class="desk-only">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+
+      <div class="project two">
+        <img src="images/mask-group.png" alt="another project sample">
+        <img src="images/project2.png" alt="another project sample" class="desk-only">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+
+      <div class="project three">
+        <img src="images/mask-group.png" alt="another project sample">
+        <img src="images/project3.png" alt="another project sample" class="desk-only">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Website Portfolio</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+
+      <div class="project four">
+        <img src="images/mask-group.png" alt="another project sample">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+
+      <div class="project five">
+        <img src="images/mask-group.png" alt="another project sample">
+        <img src="images/project2.png" alt="another project sample" class="desk-only">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+
+      <div class="project six">
+        <img src="images/mask-group.png" alt="another project sample">
+        <img src="images/project3.png" alt="another project sample" class="desk-only">
+        <div class="pro-layer">  
+          <h3 class="sub-pro">Professional Art Printing Data</h3>
+          <h3 class="sub-pro desk-only">Website Portfolio</h3>
+          <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
+            required has been the industry's standard.
+          </p>
+          <ul class="tech">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+          </ul>
+          <ul class="tech desk-only">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+        </div>
+        <div class="btn-bg mob-only">
+          <input type="button" value="See Project">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="about-section">
+    <div class="container">
+      <h2 class="abt-txt">About me</h2>
+      <p class="normal">Hello, I'm a software developer! I can help you build a product , feature or 
+        website Look through some of my work and experience! If you like what you see and have a 
+        project you need coded, don't hesitate to contact me.
+      </p>
+      <input type="button" value="Get Resume" class="btn-resume">
+      <hr>
+      <div class="major-skills">
+        <menu class="core-skills">
+          <li>Language
+            <ul class="lang">
+              <li>Javascript</li>
+              <li>Ruby</li>
+              <li>Html</li>
+              <li>Css</li>
+            </ul>
+          </li>
+
+          <li>Frameworks
+            <ul class="frame">
+              <li>Bootstrap</li>
+              <li>Ruby on Rails</li>
+              <li>RSPec</li>
+              <li>CapyBara</li>
+              <li>Selenium</li>
+            </ul>
+          </li>
+
+          <li>Skills
+            <ul class="skillset">
+              <li>Codekit</li>
+              <li>Github</li>
+              <li>Codepen</li>
+              <li>Gitlab</li>
+              <li>Terminal</li>
+            </ul>
+          </li>
+        </menu>
       </div>
     </div>
   </section>
