Work on the styling of works and about section of the portfolio

--- a/index.html
+++ b/index.html
@@ -210,30 +210,28 @@
         website Look through some of my work and experience! If you like what you see and have a 
         project you need coded, don't hesitate to contact me.
       </p>
-      <input type="button" value="Get Resume" class="btn-resume">
-      <hr>
+      <input type="button" value="Get My Resume" class="btn-resume">
+      <hr class="abt-line">
       <div class="major-skills">
         <menu class="core-skills">
-          <li>Language
-            <ul class="lang">
+          <li class="lg-skill menu">Language</li>
+            <ul class="skillset">
               <li>Javascript</li>
               <li>Ruby</li>
               <li>Html</li>
               <li>Css</li>
             </ul>
-          </li>
 
-          <li>Frameworks
-            <ul class="frame">
+          <li class="libraries menu">Frameworks</li>
+            <ul class="skillset">
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
               <li>RSPec</li>
               <li>CapyBara</li>
               <li>Selenium</li>
             </ul>
-          </li>
 
-          <li>Skills
+          <li class="tools menu">Skills</li>
             <ul class="skillset">
               <li>Codekit</li>
               <li>Github</li>
@@ -241,7 +239,6 @@
               <li>Gitlab</li>
               <li>Terminal</li>
             </ul>
-          </li>
         </menu>
       </div>
     </div>
