Adjust overlaping works and about sections

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
       <input type="button" value="Get My Resume" class="btn-resume">
       <hr class="abt-line">
       <div class="major-skills">
-        <menu class="core-skills">
-          <li class="lg-skill menu">Language</li>
+        <div class="core-skills">
+          <div class="lg-skill menu">Language</div>
             <ul class="skillset">
               <li>Javascript</li>
               <li>Ruby</li>
@@ -222,7 +222,7 @@
               <li>Css</li>
             </ul>
 
-          <li class="libraries menu">Frameworks</li>
+          <div class="libraries menu">Frameworks</div>
             <ul class="skillset">
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
@@ -231,7 +231,7 @@
               <li>Selenium</li>
             </ul>
 
-          <li class="tools menu">Skills</li>
+          <div class="tools menu">Skills</div>
             <ul class="skillset">
               <li>Codekit</li>
               <li>Github</li>
@@ -239,7 +239,7 @@
               <li>Gitlab</li>
               <li>Terminal</li>
             </ul>
-        </menu>
+          </div>
       </div>
     </div>
   </section>
