Effect Code reviewer's constructive recommendations

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <input type="button" value="See Project">
+        <button type="submit">See Project</button>
       </div>
 
       <div class="project one">
@@ -83,7 +83,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
 
@@ -106,7 +106,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
 
@@ -129,7 +129,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
 
@@ -151,7 +151,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
 
@@ -174,7 +174,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
 
@@ -197,7 +197,7 @@
           </ul>
         </div>
         <div class="btn-bg mob-only">
-          <input type="button" value="See Project">
+          <button type="submit">See Project</button>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
         website Look through some of my work and experience! If you like what you see and have a 
         project you need coded, don't hesitate to contact me.
       </p>
-      <input type="button" value="Get My Resume" class="btn-resume">
+      <button type="submit">Get My Resume</button>
       <hr class="abt-line">
       <div class="major-skills">
         <div class="core-skills">
@@ -221,7 +221,8 @@
               <li>Html</li>
               <li>Css</li>
             </ul>
-
+        </div>
+        <div class="core-skills">
           <div class="libraries menu">Frameworks</div>
             <ul class="skillset">
               <li>Bootstrap</li>
@@ -230,7 +231,8 @@
               <li>CapyBara</li>
               <li>Selenium</li>
             </ul>
-
+        </div>
+        <div class="core-skills">
           <div class="tools menu">Skills</div>
             <ul class="skillset">
               <li>Codekit</li>
@@ -239,7 +241,7 @@
               <li>Gitlab</li>
               <li>Terminal</li>
             </ul>
-          </div>
+        </div>
       </div>
     </div>
   </section>
