Complete contact-section

--- a/index.html
+++ b/index.html
@@ -267,14 +267,15 @@
         <button class="contact-btn">Get in touch</button>
       </form>
     </div>
-    <div class="social-link-lp contact-links">
-      <ul class="top-link">
+    <div class="social-link-lp footerlink">
+      <ul class="top-link contact-links">
         <li><a href="https://www.github.com/MindPrepDev"><img src="images/footer-git.svg" alt="my github profile"></a></li>
         <li><a href="https://www.linkedin.com/in/oluwatoyin-olaoye-82880363/"><img src="images/foot-linked.svg" alt="my linkedin profile"></a></li>
         <li><a href="#"><img src="images/footer-ang.svg" alt="connect to angel list"></a></li>
         <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/footer-twt.svg" alt=""></a></li>
         <li><a href="https://medium.com/@mindprepopps"><img src="images/footer-medium.svg" alt=""></a></li>
       </ul>
+      <div class="btm-border"></div>
     </div>
   </section>
 </body>
