changed all fixed units and make images responsive

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
 
   <header>
-    <div class="container nav-container">
-      <a href="index.html">Oluwatoyin Olaoye</a>
-      <img src="images/menu.svg" alt="open navigation">
+    <div class="nav-container">
+      <div class="mob-nav">
+        <a href="index.html">Oluwatoyin Olaoye</a>
+        <img src="images/menu.svg" alt="open navigation">
+      </div>
+      
       <nav class="desktop-nav">
         <ul class="nav-link">
           <li><a href="#works-section">Portfolio</a></li>
@@ -267,6 +270,7 @@
         <button class="contact-btn">Get in touch</button>
       </form>
     </div>
+    <hr id="br">
     <div class="social-link-lp footerlink">
       <ul class="top-link contact-links">
         <li><a href="https://www.github.com/MindPrepDev"><img src="images/footer-git.svg" alt="my github profile"></a></li>
