Implement some designs to respond to a minimum screen of 768px-898px

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="project one">
+      <div class="project one card-1">
         <div class="pro-layer">  
           <h3 class="sub-pro">Professional Art Printing Data</h3>
           <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
@@ -89,12 +89,12 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg">
           <button type="submit">See Project</button>
         </div>
       </div>
 
-      <div class="project two">
+      <div class="project two card-2">
         <div class="pro-layer">  
           <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
           <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
@@ -112,13 +112,13 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg">
           <button type="submit">See Project</button>
         </div>
       </div>
 
-      <div class="project three">
-        <div class="pro-layer">  
+      <div class="project three card-3">
+        <div class="pro-layer web">  
           <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
           <h3 class="sub-pro desk-only">Website Portfolio</h3>
           <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
@@ -135,12 +135,12 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg rem">
           <button type="submit">See Project</button>
         </div>
       </div>
 
-      <div class="project four">
+      <div class="project four card-1">
         <div class="pro-layer">  
           <h3 class="sub-pro">Professional Art Printing Data</h3>
           <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
@@ -157,12 +157,12 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg">
           <button type="submit">See Project</button>
         </div>
       </div>
 
-      <div class="project five">
+      <div class="project five card-2">
         <div class="pro-layer">  
           <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
           <h3 class="sub-pro desk-only">Data Dashboard Healthcare</h3>
@@ -180,13 +180,13 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg">
           <button type="submit">See Project</button>
         </div>
       </div>
 
-      <div class="project six">
-        <div class="pro-layer">  
+      <div class="project six card-3">
+        <div class="pro-layer web">  
           <h3 class="sub-pro mob-only">Professional Art Printing Data</h3>
           <h3 class="sub-pro desk-only">Website Portfolio</h3>
           <p class="normal">A daily selection of privately personalized reads; no accounts or sign-ups 
@@ -203,7 +203,7 @@
             <li>Ruby</li>
           </ul>
         </div>
-        <div class="btn-bg mob-only">
+        <div class="btn-bg cursor-hover-bg rem">
           <button type="submit">See Project</button>
         </div>
       </div>
@@ -230,7 +230,7 @@
             </ul>
         </div>
         <div class="core-skills">
-          <div class="libraries menu">Frameworks</div>
+          <div class="libraries menu frm">Frameworks</div>
             <ul class="skillset">
               <li>Bootstrap</li>
               <li>Ruby on Rails</li>
@@ -256,7 +256,7 @@
   <section class="sect-container" id="contact-section">
     <div class="contact-form">
       <p class="normal form-para">I'm always interested in hearing about new projects, so if you'd like to chat please do get in touch.</p>
-      <form class="mob-form" action="https://formspree.io/f/mrgjojra" method="post">
+      <form class="mob-only" action="https://formspree.io/f/mrgjojra" method="post">
         <input type="text" class="font-style" name="fullname" id="fullname" placeholder="Full name" maxlength="30" required>
         <hr class="form-line">
         <input type="email" class="font-style" name="email" id="email-mobile" placeholder="Email address" required>
@@ -269,7 +269,7 @@
         <input type="text" class="font-style" name="firstname" id="firstname" placeholder="First Name" maxlength="30" required>
         <input type="text" class="font-style" name="lastname" id="lastname" placeholder="Last Name" maxlength="30" required><br>
         <input type="email" class="font-style" name="email" id="email" placeholder="Email address" required>
-        <textarea id="textarea" class="font-style" name="message" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
+        <textarea id="textarea" class="font-style" name="message" cols="30" rows="10" maxlength="500" required>Enter text here</textarea>
         <br>
         <button class="contact-btn">Get in touch</button>
       </form>
