--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         works and experiences. If you like what you see and have a project you need coded, don't hesitate to contact me.
       </p>
       <div class="social-link-lp">
-        <ul class="top-link">
+        <ul class="top-link top">
           <li><a href="https://www.github.com/MindPrepDev"><img src="images/github.svg" alt="my github profile"></a></li>
           <li><a href="https://www.linkedin.com/in/oluwatoyin-olaoye-82880363/"><img src="images/linkedin.svg" alt="my linkedin profile"></a></li>
           <li><a href="#"><img src="images/angel-list.svg" alt="connect to angel list"></a></li>
@@ -268,7 +268,7 @@
       <form class="desk-only" id="lg-screen" action="https://formspree.io/f/mrgjojra" method="post">
         <input type="text" class="font-style" name="firstname" id="firstname" placeholder="First Name" maxlength="30" required>
         <input type="text" class="font-style" name="lastname" id="lastname" placeholder="Last Name" maxlength="30" required><br>
-        <input type="email" class="font-style" name="email" id="email" placeholder="Email address" required>
+        <input type="email" class="font-style" name="email" id="email" placeholder="Email address" required><br>
         <textarea id="textarea" class="font-style" name="message" cols="30" rows="10" maxlength="500" required>Enter text here</textarea>
         <br>
         <button class="contact-btn">Get in touch</button>
@@ -283,7 +283,7 @@
         <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/footer-twt.svg" alt=""></a></li>
         <li><a href="https://medium.com/@mindprepopps"><img src="images/footer-medium.svg" alt=""></a></li>
       </ul>
-      <div class="btm-border"></div>
+      <div class="btm-border mob-only"></div>
     </div>
   </section>
 </body>
