Add more better user exeperience effects to the top social links on bigscreens

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </p>
       <div class="social-link-lp">
         <ul class="top-link top">
-          <li><a href="https://www.github.com/MindPrepDev"><img src="images/github.svg" alt="my github profile"></a></li>
-          <li><a href="https://www.linkedin.com/in/oluwatoyin-olaoye-82880363/"><img src="images/linkedin.svg" alt="my linkedin profile"></a></li>
-          <li><a href="#"><img src="images/angel-list.svg" alt="connect to angel list"></a></li>
-          <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/twitter.svg" alt=""></a></li>
-          <li><a href="https://medium.com/@mindprepopps"><img src="images/medium.svg" alt=""></a></li>
+          <li><a href="https://www.github.com/MindPrepDev"><img src="images/github.svg" alt="my github profile"><span class="d-link">Connect on GitHub</span></a></li>
+          <li><a href="https://www.linkedin.com/in/oluwatoyin-olaoye-82880363/"><img src="images/linkedin.svg" alt="my linkedin profile"><span class="d-link">Connect on LinkedIn</span></a></li>
+          <li><a href="#"><img src="images/angel-list.svg" alt="connect to angel list"><span class="d-link">Check Angel-list</span></a></li>
+          <li><a href="https://www.twitter.com/olaoyeelijah"><img src="images/twitter.svg" alt=""><span class="d-link">Connect via Twitter</span></a></li>
+          <li><a href="https://medium.com/@mindprepopps"><img src="images/medium.svg" alt=""><span class="d-link">Checkout Medium</span></a></li>
         </ul>
       </div>
     </div>
