Style the menu/exit navigation button

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
       </div>
       
       <nav class="desktop-nav">
+        <img src="images/cancel.svg" width="20" height="20" alt="remove menu" class="close-nav mob-only">
         <ul class="nav-link">
-          <li><a href="#works-section">Portfolio</a></li>
-          <li><a href="#about-section">About</a></li>
-          <li><a href="#contact-section">Contact</a></li>
-          <li><a href="mailto:mindprepopps@gmail.com"><img src="images/mail.png" alt="send a mail"></a></li>
+          <li><a class="pad-link" href="#works-section">Portfolio</a></li>
+          <hr class="nav-hr mob-only">
+          <li><a class="pad-link" href="#about-section">About</a></li>
+          <hr class="nav-hr mob-only">
+          <li><a class="pad-link" href="#contact-section">Contact</a></li>
+          <hr class="nav-hr mob-only">
+          <li class="desk-only"><a href="mailto:mindprepopps@gmail.com"><img src="images/mail.png" alt="send a mail"></a></li>
         </ul>
       </nav>
     </div>
