Prep for Pair Programming jam on the Hamburger button

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="nav-container">
       <div class="mob-nav">
         <a href="index.html">Oluwatoyin Olaoye</a>
-        <img class="mob-only" src="images/menu.svg" alt="open navigation">
+        <img class="mob-only menu-btn" src="images/menu.svg" alt="open navigation">
       </div>
       
       <nav class="desktop-nav">
-        <img src="images/cancel.svg" width="20" height="20" alt="remove menu" class="close-nav mob-only">
+        <img src="images/cancel.svg" width="20" height="20" alt="close navigation" class="close-nav mob-only">
         <ul class="nav-link">
           <li><a class="pad-link" href="#works-section">Portfolio</a></li>
           <hr class="nav-hr mob-only">
@@ -290,5 +290,6 @@
       <div class="btm-border mob-only"></div>
     </div>
   </section>
+  <script src="main.js"></script>
 </body>
 </html>
